--- a/index.html
+++ b/index.html
@@ -169,22 +169,52 @@
 			font-weight: bold;
 		}
 
+		input[type=text] {
+   	 	width: 225px;
+    	box-sizing: border-box;
+    	border: 2px solid #ccc;
+    	border-radius: 4px;
+    	font-size: 16px;
+    	background-color: white;
+    	background-image: ("searchicon.png")
+    	background-position: 10px 10px; 
+    	background-repeat: no-repeat;
+    	padding: 12px 0px 12px 10px;
+    	-webkit-transition: width 0.4s ease-in-out;
+    	transition: width 0.4s ease-in-out;
+	}
 
+		input[type=text]:focus {
+    	width: 20%;
 
+    }
 
 	</style>
 
 
 	<ul>
-		<li class="li" style="float:left"><a class="home" size="35" href="#home">Fortnite Betting</a></li>
+		<li class="li" style="float:left"><a class="home" size="35" onclick="myFunction()" href="#home">Fortnite Betting</a></li>
 		<li> <a href="#howtoplay"> How To Play </a> </li>
 		<li><a href="https://goo.gl/forms/kF9DAMUurgJhVUxr1" target="_blank"> Free Coins </a> </li>
 		<li style="float:right"><a class="account" href="#account">Login/Register</a></li>
 	</ul>
 
 
+	<form>
+	<center>
+  	<input type="text" name="search" placeholder="Select a channel eg. Ninja">
+	</center>
+	</form>
 	<br>
-	<center> <iframe src="http://player.twitch.tv/?channel=ninja" allowfullscreen width="854" height="480"></iframe> </center>
+	<center> <iframe src="http://player.twitch.tv/?channel=ninja&autoplay=true" frameborder="0" scrolling="no" allowfullscreen width="854" height="480"></iframe> 
+	<iframe frameborder="<frameborder width>"
+        scrolling="no"
+        id="chat_embed"
+        src="http://twitch.tv/embed/ninja/chat"
+        height="480"
+        width="default">
+	</iframe>
+	</center>
 	</br>
 
 	<p class="timer" id="demo"></p>
@@ -227,7 +257,7 @@
 
 	<script> 
 
-		var countDownDate = new Date("May 15, 2018 13:00:00").getTime();
+		var countDownDate = new Date("May 16, 2018 14:00:00").getTime();
 
 		var x = setInterval(function() {
 		var now = new Date().getTime();
@@ -242,7 +272,7 @@
     var seconds = Math.floor((distance % (1000 * 60)) / 1000);
     
     // Output the result in an element with id="demo"
-    document.getElementById("demo").innerHTML = "Time left to bet : " + minutes + "m " + seconds + "s ";
+    document.getElementById("demo").innerHTML = "Time left to bet : " + hours + minutes + "m " + seconds + "s ";
     
     // If the count down is over, write some text 
     if (distance < 0) {
@@ -252,9 +282,13 @@
 
 	}, 1000);
 
+	function myFunction() {
+		location.reload();
+	}
+
+
 
 	</script>
-
 
 </body>
 </html>
